# KaruSampi

./: CMakeLists.txt  README.md  diagnosticAlgorithm.cpp  diagnosticAlgorithm.h  diagnosticAlgoritm.cpp  diagnosticAlgoritm.h  types.h
resources/: cDisease.cpp  cDisease.h  cDoctor.cpp  cDoctor.h  cMedicine.cpp  cMedicine.h  cPatient.cpp  cPatient.h  cReport.cpp  cReport.h  cSymptom.cpp  cSymptom.h
